
install( FILES 
  DrBase
  DrBooleanOption
  DrFloatOption
  DrGroup
  DrIntegerOption
  DrListOption
  DrMain
  DrStringOption
  FileProtocol
  I18nTypeCheck
  K3BookmarkDrag
  K3ColorDrag
  K3DictSpellingHighlighter
  K3DockArea
  K3DockMainWindow
  K3DockManager
  K3DockTabGroup
  K3DockWidget
  K3DockWidgetAbstractHeader
  K3DockWidgetAbstractHeaderDrag
  K3DockWidgetHeader
  K3DockWidgetHeaderDrag
  K3Icon
  K3IconView
  K3IconViewItem
  K3IconViewSearchLine
  K3ListView
  K3ListViewItem
  K3ListViewLineEdit
  K3ListViewSearchLine
  K3ListViewSearchLineWidget
  K3MimeSourceFactory
  K3MultipleDrag
  K3PopupMenu
  K3Spell
  K3SpellConfig
  K3SpellDlg
  K3SpellingHighlighter
  K3SyntaxHighlighter
  K3TempFile
  K3TextEdit
  K3URLDrag
  K3Wizard
  KACL
  K3AboutApplication
  KAboutApplicationDialog
  K3AboutContainer
  K3AboutContributor
  KAboutData
  K3AboutDialog
  KAboutKdeDialog
  KAboutPerson
  KAboutTranslator
  K3AboutWidget
  KAcceleratorManager
  KAction
  KActionCollection
  KActionMenu
  KActionSelector
  KActiveLabel
  KAnimatedButton
  KApplication
  KApplicationPropsPlugin
  KAr
  KArchive
  KArchiveDirectory
  KArchiveEntry
  KArchiveFile
  KArrowButton
  KAssistantDialog
  KAuthorized
  KAutoMount
  KAutoUnmount
  KAutostart
  KBindingPropsPlugin
  KBookmark
  KBookmarkAction
  KBookmarkActionContextMenu
  KBookmarkActionInterface
  KBookmarkActionMenu
  KBookmarkBar
  KBookmarkDomBuilder
  KBookmarkExporterBase
  KBookmarkGroup
  KBookmarkGroupTraverser
  KBookmarkImporter
  KBookmarkImporterBase
  KBookmarkManager
  KBookmarkMenu
  KBookmarkNotifier
  KBookmarkOwner
  KBugReport
  KBuildSycocaProgressDialog
  KButtonBox
  KButtonGroup
  KCModule
  KCModuleContainer
  KCModuleInfo
  KCModuleLoader
  KCModuleProxy
  KCMultiDialog
  KCPUInfo
  KCalendarSystem
  KCalendarSystemFactory
  KCatalog
  KCharMacroExpander
  KCharSelect
  KCharSelectTable
  KCharsets
  KClipboardSynchronizer
  KCmdLineArgs
  KCmdLineOptions
  KCodecs
  KColor
  KColorButton
  KColorCells
  KColorCombo
  KColorDialog
  KColorMimeData
  KColorPatch
  KColorValueSelector
  KCombiView
  KComboBox
  KCommand
  KCommandHistory
  KCompletion
  KCompletionBase
  KCompletionBox
  KCompletionMatches
  KCompositeJob
  KConfig
  KConfigBackEnd
  KConfigBase
  KConfigDialog
  KConfigDialogManager
  KConfigGroup
  KConfigINIBackEnd
  KConfigSkeleton
  KConfigSkeletonGenericItem
  KConfigSkeletonItem
  KCookie
  KCrash
  KCrashBookmarkImporter
  KCrashBookmarkImporterImpl
  KCursor
  KCustomMenuEditor
  KDBusServiceStarter
  KDebug
  KDEDModule
  KDEDesktopMimeType
  KDEsuClient
  KDataTool
  KDataToolAction
  KDataToolInfo
  KDateInternalMonthPicker
  KDateInternalWeekSelector
  KDateInternalYearSelector
  KDatePicker
  KDateTable
  KDateTime
  KDateTimeWidget
  KDateValidator
  KDateWidget
  KDesktopFile
  KDesktopPropsPlugin
  KDevicePropsPlugin
  KDialog
  KDialogButtonBox
  KDialogQueue
  KDirLister
  KDirModel
  KDirOperator
  KDirSelectDialog
  KDirSize
  KDirWatch
  KDiskFreeSp
  KDoubleNumInput
  KDoubleSpinBox
  KDoubleValidator
  KEMailSettings
  KEditListBox
  KEditToolbar
  KEditToolbarWidget
  KEncodingFileDialog
  KEntry
  KEntryKey
  KExecPropsPlugin
  KFile
  KFileDetailView
  KFileDialog
  KFileFilter
  KFileFilterCombo
  KFileIconView
  KFileIconViewItem
  KFileItem
  KFileItemList
  KFileItemDelegate
  KFileListViewItem
  KFileMetaInfo
  KFileMetaInfoGroup
  KFileMetaInfoItem
  KFileMetaInfoProvider
  KFileMimeTypeInfo
  KFilePermissionsPropsPlugin
  KFilePlugin
  KFilePreview
  KFilePropsPlugin
  KFileShare
  KFileSharePropsPlugin
  KFileTreeBranch
  KFileTreeView
  KFileTreeViewItem
  KFileView
  KFileViewSignaler
  KFilterBase
  KFilterDev
  KFind
  KFindDialog
  KFloatValidator
  KFolderType
  KFontAction
  KFontChooser
  KFontDialog
  KFontRequester
  KFontSizeAction
  KGenericFactory
  KGenericFactoryBase
  KGlobal
  KGlobalAccel
  KGlobalSettings
  KGradientSelector
  KGuiItem
  KHBox
  KHTMLPart
  KHTMLSettings
  KHTMLView
  KHelpMenu
  KHistoryCombo
  KHueSaturationSelector
  KIEBookmarkExporterImpl
  KIEBookmarkImporter
  KIEBookmarkImporterImpl
  KIMProxy
  KIOBufferBase
  KIcon
  KIconButton
  KIconCanvas
  KIconDialog
  KIconEffect
  KIconEngine
  KIconLoader
  KIconTheme
  KImageEffect
  KImageFilePreview
  KImageIO
  KInputDialog
  KComponentData
  KIntNumInput
  KIntSpinBox
  KIntValidator
  KJob
  KJobUiDelegate
  KKeyButton
  KKeyChooser
  KKeyDialog
  KLanguageButton
  KLed
  KLibFactory
  KLibLoader
  KLibrary
  KLineEdit
  KListBox
  KLocale
  KLocalizedString
  KLockFile
  KMD4
  KMD5
  KMJob
  KMJobManager
  KMJobViewer
  KMMainView
  KMManager
  KMPrinter
  KMTimer
  KMacroCommand
  KMacroExpanderBase
  KMainWindow
  KMakeTypeList
  KMenu
  KMenuBar
  KMessage
  KMessageBox
  KMessageBoxMessageHandler
  KMessageHandler
  KMimeMagic
  KMimeMagicResult
  KMimeType
  KMimeTypeChooser
  KMimeTypeChooserDialog
  KMimeTypeResolver
  KMimeTypeResolverBase
  KMimeTypeResolverHelper
  KMimeTypeTrader
  KMimeTypeValidator
  KMozillaBookmarkImporterImpl
  KMultiTabBar
  KMultiTabBarButton
  KMultiTabBarTab
  KNFSShare
  KNSBookmarkExporter
  KNSBookmarkExporterImpl
  KNSBookmarkImporter
  KNSBookmarkImporterImpl
  KNTLM
  KNamedCommand
  KNewStuff
  KNewStuffGeneric
  KNewStuffSecure
  KNotification
  KNotificationRestrictions
  KNotifyConfigWidget
  KNumInput
  KOCRDialog
  KOCRDialogFactory
  KOpenSSLProxy
  KOpenWithDialog
  KOperaBookmarkExporterImpl
  KOperaBookmarkImporter
  KOperaBookmarkImporterImpl
  KPReloadObject
  KPageDialog
  KPageModel
  KPageView
  KPageWidget
  KPageWidgetItem
  KPageWidgetModel
  KPalette
  KPaletteTable
  KPassivePopup
  KPassivePopupMessageHandler
  KPasswordDialog
  KPasswordEdit
  KPasteTextAction
  KPixmapEffect
  KPixmapProvider
  KPixmapRegionSelectorDialog
  KPixmapRegionSelectorWidget
  KPixmapSplitter
  KPluginInfo
  KPluginSelector
  KPopupFrame
  KPreviewWidgetBase
  KPrintAction
  KPrintDialog
  KPrintDialogPage
  KPrinter
  KProcIO
  KProcess
  KProcessController
  KProcessRunner
  KProgressDialog
  KPropertiesDialog
  KPropsDlgPlugin
  KProtocolInfo
  KProtocolManager
  KPty
  KPushButton
  KRFCDate
  KRandom
  KRandomSequence
  KRecentDocument
  KRecentFilesAction
  KRemoteEncoding
  KReplace
  KReplaceDialog
  KRestrictedLine
  KRuler
  KRun
  KSMIMECrypto
  KSSL
  KSSLCertBox
  KSSLCertChain
  KSSLCertDlg
  KSSLCertDlgRet
  KSSLCertificate
  KSSLCertificateCache
  KSSLCertificateFactory
  KSSLCertificateHome
  KSSLConnectionInfo
  KSSLInfoDlg
  KSSLKeyGen
  KSSLPKCS12
  KSSLPKCS7
  KSSLPeerInfo
  KSSLSession
  KSSLSettings
  KSSLSigners
  KSSLX509Map
  KSSLX509V3
  KSambaShare
  KSaveFile
  KScanDialog
  KScanDialogFactory
  KSelectAction
  KSelectionOwner
  KSelectionWatcher
  KSelector
  KSeparator
  KSeparatorAction
  KService
  KServiceGroup
  KServiceOffer
  KServiceSeparator
  KServiceType
  KServiceTypeProfile
  KServiceTypeTrader
  KSessionManager
  KSharedConfig
  KSharedPtr
  KShellCompletion
  KShellProcess
  KShortcut
  KShortcutDialog
  KSimpleConfig
  KSimpleFileFilter
  KSocks
  KSortableItem
  KSortableList
  KSpeech
  KSplashScreen
  KSqueezedTextLabel
  KStandardDirs
  KStandardAction
  KStandardGuiItem
  KStandardShortcut
  KStartupInfo
  KStartupInfoData
  KStartupInfoId
  KStaticDeleter
  KStaticDeleterBase
  KStatusBar
  KStatusBarLabel
  KStringHandler
  KStringListValidator
  KStyle
  KStyleFactory
  KSvgRenderer
  KSycoca
  KSycocaEntry
  KSystemTimeZone
  KSystemTimeZoneSource
  KSystemTimeZones
  KSystemTrayIcon
  KTabBar
  KTabWidget
  KTar
  KTempDir
  KTemporaryFile
  KTextBrowser
  KTextEdit
  KTimeZone
  KTimeZoneData
  KTimeZoneSource
  KTimeZoneWidget
  KTimeZones
  KTipDatabase
  KTipDialog
  KToggleAction
  KToggleFullScreenAction
  KToggleToolBarAction
  KToolBar
  KToolBarLabelAction
  KToolBarPopupAction
  KToolBarSpacerAction
  KToolInvocation
  KTreeWidgetSearchLine
  KTreeWidgetSearchLineWidget
  KTypeList
  KTypeListIndexOf
  KTypeListLength
  KTzfileTimeZone
  KTzfileTimeZoneSource
  KUniqueApplication
  KUriFilter
  KUriFilterData
  KUriFilterPlugin
  KUrl
  KUrlBar
  KUrlBarItem
  KUrlBarItemDialog
  KUrlBarListBox
  KUrlComboBox
  KUrlComboRequester
  KUrlCompletion
  KUrlLabel
  KUrlPixmapProvider
  KUrlPropsPlugin
  KUrlRequester
  KUrlRequesterDlg
  KUser
  KUserGroup
  KVBox
  KWin
  KWinModule
  KWindowListMenu
  KWordMacroExpander
  KWordWrap
  KXBELBookmarkImporterImpl
  KXErrorHandler
  KXMLGUIBuilder
  KXMLGUIClient
  KXMLGUIFactory
  KXMessages
  KXYSelector
  KZip
  KZipFileEntry
  KZoneAllocator
  KonqBookmarkMenu
  KonqBookmarkOwner
  NET
  NETRootInfo
  NETRootInfo2
  NETRootInfo3
  NETRootInfo4
  NETWinInfo
  Observer
  OrgKdeKDirNotifyInterface
  OrgKdeKLauncherInterface
  PTY
  Pointer
  PtyProcess
  QMetaTypeId
  SshProcess
  StubProcess
  SuProcess
  ThumbCreator
  Value
  kdbgstream
  kndbgstream
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE )


install( FILES 
  ConversionCheck/QVconvertible
  ConversionCheck/type_toQString
  ConversionCheck/type_toQVariant
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/ConversionCheck )


install( FILES 
  DNSSD/Configuration
  DNSSD/DomainBrowser
  DNSSD/PublicService
  DNSSD/Query
  DNSSD/RemoteService
  DNSSD/ServiceBase
  DNSSD/ServiceBrowser
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/DNSSD )


install( FILES 
  DOM/AbstractView
  DOM/Attr
  DOM/CDATASection
  DOM/CSSCharsetRule
  DOM/CSSException
  DOM/CSSFontFaceRule
  DOM/CSSImportRule
  DOM/CSSMediaRule
  DOM/CSSPageRule
  DOM/CSSPrimitiveValue
  DOM/CSSRule
  DOM/CSSRuleList
  DOM/CSSStyleDeclaration
  DOM/CSSStyleRule
  DOM/CSSStyleSheet
  DOM/CSSUnknownRule
  DOM/CSSValue
  DOM/CSSValueList
  DOM/CharacterData
  DOM/Comment
  DOM/Counter
  DOM/CustomNodeFilter
  DOM/DOMException
  DOM/DOMImplementation
  DOM/DOMString
  DOM/Document
  DOM/DocumentFragment
  DOM/DocumentStyle
  DOM/DocumentType
  DOM/DomShared
  DOM/Element
  DOM/Entity
  DOM/EntityReference
  DOM/Event
  DOM/EventException
  DOM/EventListener
  DOM/HTMLAnchorElement
  DOM/HTMLAppletElement
  DOM/HTMLAreaElement
  DOM/HTMLBRElement
  DOM/HTMLBaseElement
  DOM/HTMLBaseFontElement
  DOM/HTMLBlockquoteElement
  DOM/HTMLBodyElement
  DOM/HTMLButtonElement
  DOM/HTMLCollection
  DOM/HTMLDListElement
  DOM/HTMLDirectoryElement
  DOM/HTMLDivElement
  DOM/HTMLDocument
  DOM/HTMLElement
  DOM/HTMLFieldSetElement
  DOM/HTMLFontElement
  DOM/HTMLFormCollection
  DOM/HTMLFormElement
  DOM/HTMLFrameElement
  DOM/HTMLFrameSetElement
  DOM/HTMLHRElement
  DOM/HTMLHeadElement
  DOM/HTMLHeadingElement
  DOM/HTMLHtmlElement
  DOM/HTMLIFrameElement
  DOM/HTMLImageElement
  DOM/HTMLInputElement
  DOM/HTMLIsIndexElement
  DOM/HTMLLIElement
  DOM/HTMLLabelElement
  DOM/HTMLLayerElement
  DOM/HTMLLegendElement
  DOM/HTMLLinkElement
  DOM/HTMLMapElement
  DOM/HTMLMenuElement
  DOM/HTMLMetaElement
  DOM/HTMLModElement
  DOM/HTMLOListElement
  DOM/HTMLObjectElement
  DOM/HTMLOptGroupElement
  DOM/HTMLOptionElement
  DOM/HTMLParagraphElement
  DOM/HTMLParamElement
  DOM/HTMLPreElement
  DOM/HTMLQuoteElement
  DOM/HTMLScriptElement
  DOM/HTMLSelectElement
  DOM/HTMLStyleElement
  DOM/HTMLTableCaptionElement
  DOM/HTMLTableCellElement
  DOM/HTMLTableColElement
  DOM/HTMLTableElement
  DOM/HTMLTableRowElement
  DOM/HTMLTableSectionElement
  DOM/HTMLTextAreaElement
  DOM/HTMLTitleElement
  DOM/HTMLUListElement
  DOM/KeyboardEvent
  DOM/LinkStyle
  DOM/MediaList
  DOM/MouseEvent
  DOM/MutationEvent
  DOM/NamedNodeMap
  DOM/Node
  DOM/NodeFilter
  DOM/NodeIterator
  DOM/NodeList
  DOM/Notation
  DOM/ProcessingInstruction
  DOM/RGBColor
  DOM/Range
  DOM/RangeException
  DOM/Rect
  DOM/StyleSheet
  DOM/StyleSheetList
  DOM/Text
  DOM/TextEvent
  DOM/TreeWalker
  DOM/UIEvent
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/DOM )


install( FILES 
  KAccelGen/Deref
  KAccelGen/Deref_Key
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KAccelGen )


install( FILES 
  KDEPrivate/ConcreteFactory
  KDEPrivate/If
  KDEPrivate/InheritanceDetector
  KDEPrivate/MultiFactory
  KDEPrivate/PartInheritanceTest
  KDEPrivate/QWidgetInheritanceTest
  KDEPrivate/Type2Type
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KDEPrivate )


install( FILES 
  KHE/CharColumnInterface
  KHE/ClipboardInterface
  KHE/ValueColumnInterface
  KHE/ZoomInterface
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KHE )


install( FILES 
  KIO/AuthInfo
  KIO/ChmodJob
  KIO/Connection
  KIO/CopyInfo
  KIO/CopyJob
  KIO/DavJob
  KIO/DefaultProgress
  KIO/DeleteJob
  KIO/DirectCopyJob
  KIO/FileCopyJob
  KIO/FileJob
  KIO/ForwardingSlaveBase
  KIO/Job
  KIO/JobUiDelegate
  KIO/ListJob
  KIO/MetaData
  KIO/MetaInfoJob
  KIO/MimetypeJob
  KIO/MkdirJob
  KIO/MultiGetJob
  KIO/NetAccess
  KIO/NetRC
  KIO/PasswordDialog
  KIO/PreviewJob
  KIO/ProgressBase
  KIO/RenameDlg
  KIO/RenameDlgPlugin
  KIO/Scheduler
  KIO/SessionData
  KIO/SimpleJob
  KIO/SkipDlg
  KIO/Slave
  KIO/SlaveBase
  KIO/SlaveConfig
  KIO/SlaveInterface
  KIO/StatJob
  KIO/StatusbarProgress
  KIO/StoredTransferJob
  KIO/TCPSlaveBase
  KIO/Task
  KIO/TransferJob
  KIO/UDSField
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KIO )


install( FILES 
  KJS/CString
  KJS/Collector
  KJS/Completion
  KJS/DeclaredFunctionImp
  KJS/Error
  KJS/ExecState
  KJS/FunctionImp
  KJS/HashEntry
  KJS/Identifier
  KJS/Interpreter
  KJS/JSCell
  KJS/JSImmediate
  KJS/JSLock
  KJS/JSObject
  KJS/JSValue
  KJS/List
  KJS/Lookup
  KJS/PropertyMap
  KJS/PropertyNameArray
  KJS/PropertySlot
  KJS/ProtectedPtr
  KJS/ScopeChain
  KJS/ScopeChainIterator
  KJS/ScopeChainNode
  KJS/UChar
  KJS/UCharReference
  KJS/UString
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KJS )


install( FILES 
  KJSEmbed/Constructor
  KJSEmbed/Engine
  KJSEmbed/Enumerator
  KJSEmbed/Method
  KJSEmbed/ObjectBinding
  KJSEmbed/ObjectFactory
  KJSEmbed/ProxyBinding
  KJSEmbed/QObjectBinding
  KJSEmbed/QWidgetBinding
  KJSEmbed/SlotBinding
  KJSEmbed/StaticBinding
  KJSEmbed/StaticConstructor
  KJSEmbed/VariantBinding
  KJSEmbed/VariantFactory
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KJSEmbed )


install( FILES 
  KMediaPlayer/Player
  KMediaPlayer/View
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KMediaPlayer )


install( FILES 
  KNS/Button
  KNS/DownloadDialog
  KNS/Engine
  KNS/Entry
  KNS/Provider
  KNS/ProviderDialog
  KNS/ProviderLoader
  KNS/UploadDialog
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KNS )


install( FILES 
  KNetwork/KActiveSocketBase
  KNetwork/KBufferedSocket
  KNetwork/KClientSocketBase
  KNetwork/KDatagramPacket
  KNetwork/KDatagramSocket
  KNetwork/KHttpProxySocketDevice
  KNetwork/KInetSocketAddress
  KNetwork/KIpAddress
  KNetwork/KMulticastSocket
  KNetwork/KMulticastSocketDevice
  KNetwork/KPassiveSocketBase
  KNetwork/KResolver
  KNetwork/KResolverEntry
  KNetwork/KResolverResults
  KNetwork/KReverseResolver
  KNetwork/KServerSocket
  KNetwork/KSocketAddress
  KNetwork/KSocketBase
  KNetwork/KSocketDevice
  KNetwork/KSocketDeviceFactory
  KNetwork/KSocksSocketDevice
  KNetwork/KStreamSocket
  KNetwork/KUnixSocketAddress
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KNetwork )

install( FILES 
  KParts/BrowserExtension
  KParts/BrowserHostExtension
  KParts/BrowserInterface
  KParts/BrowserRun
  KParts/ComponentFactory
  KParts/DockMainWindow3
  KParts/Event
  KParts/Factory
  KParts/GUIActivateEvent
  KParts/GenericFactory
  KParts/GenericFactoryBase
  KParts/HistoryProvider
  KParts/LiveConnectExtension
  KParts/MainWindow
  KParts/OpenURLEvent
  KParts/Part
  KParts/PartActivateEvent
  KParts/PartBase
  KParts/PartManager
  KParts/PartSelectEvent
  KParts/Plugin
  KParts/ReadOnlyPart
  KParts/ReadWritePart
  KParts/StatusBarExtension
  KParts/URLArgs
  KParts/WindowArgs
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KParts )


install( FILES 
  KSettings/ComponentsDialog
  KSettings/Dialog
  KSettings/Dispatcher
  KSettings/PluginPage
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KSettings )


install( FILES 
  Sonnet/GuessLanguage
  Sonnet/UnicodeData
  Sonnet/TextBreaks
  Sonnet/Spell
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/Sonnet )


install( FILES 
  KTextEditor/Attribute
  KTextEditor/CodeCompletionInterface
  KTextEditor/CodeCompletionModel
  KTextEditor/Command
  KTextEditor/CommandExtension
  KTextEditor/CommandInterface
  KTextEditor/ConfigInterface
  KTextEditor/ConfigPage
  KTextEditor/Cursor
  KTextEditor/Document
  KTextEditor/Editor
  KTextEditor/EditorChooser
  KTextEditor/Factory
  KTextEditor/HighlightingInterface
  KTextEditor/MarkInterface
  KTextEditor/ModificationInterface
  KTextEditor/Plugin
  KTextEditor/Range
  KTextEditor/SearchInterface
  KTextEditor/SessionConfigInterface
  KTextEditor/SmartCursor
  KTextEditor/SmartCursorNotifier
  KTextEditor/SmartCursorWatcher
  KTextEditor/SmartInterface
  KTextEditor/SmartRange
  KTextEditor/SmartRangeNotifier
  KTextEditor/SmartRangeWatcher
  KTextEditor/TemplateInterface
  KTextEditor/TextHintInterface
  KTextEditor/VariableInterface
  KTextEditor/View
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KTextEditor )


install( FILES 
  KUnitTest/Runner
  KUnitTest/SlotTester
  KUnitTest/TestResults
  KUnitTest/Tester
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KUnitTest )


install( FILES 
  KWallet/Wallet
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KWallet )


install( FILES 
  KXMLCore/DefaultHash
  KXMLCore/DeletedValueAssigner
  KXMLCore/GenericHashTraits
  KXMLCore/GenericHashTraitsBase
  KXMLCore/HashCountedSet
  KXMLCore/HashKeyStorageTraits
  KXMLCore/HashMap
  KXMLCore/HashMapTranslator
  KXMLCore/HashSet
  KXMLCore/HashSetTranslator
  KXMLCore/HashSetTranslatorAdapter
  KXMLCore/HashTable
  KXMLCore/HashTableConstIterator
  KXMLCore/HashTableConstIteratorAdapter
  KXMLCore/HashTableIterator
  KXMLCore/HashTableIteratorAdapter
  KXMLCore/HashTableRefCounter
  KXMLCore/HashTableRefCounterBase
  KXMLCore/HashTraits
  KXMLCore/IdentityExtractor
  KXMLCore/IdentityHashTranslator
  KXMLCore/IntHash
  KXMLCore/IntTypes
  KXMLCore/IsInteger
  KXMLCore/IsPod
  KXMLCore/Mover
  KXMLCore/NeedsRef
  KXMLCore/OwnArrayPtr
  KXMLCore/OwnPtr
  KXMLCore/PairBaseHashTraits
  KXMLCore/PairFirstExtractor
  KXMLCore/PairHashTraits
  KXMLCore/PassRefPtr
  KXMLCore/PtrHash
  KXMLCore/RefCounter
  KXMLCore/RefCounterBase
  KXMLCore/RefPtr
  KXMLCore/SharedPtr
  KXMLCore/Vector
  KXMLCore/VectorBuffer
  KXMLCore/VectorCopier
  KXMLCore/VectorDestructor
  KXMLCore/VectorFiller
  KXMLCore/VectorInitializer
  KXMLCore/VectorMover
  KXMLCore/VectorTraits
  KXMLCore/VectorTraitsBase
  KXMLCore/VectorTypeOperations
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/KXMLCore )


install( FILES 
  Phonon/AbstractAudioOutput
  Phonon/AbstractMediaProducer
  Phonon/AbstractVideoOutput
  Phonon/AudioDataOutput
  Phonon/AudioEffect
  Phonon/AudioOutput
  Phonon/AudioPath
  Phonon/AudioPlayer
  Phonon/AvCapture
  Phonon/BackendCapabilities
  Phonon/Base
  Phonon/BrightnessControl
  Phonon/ByteStream
  Phonon/ByteStreamInterface
  Phonon/Effect
  Phonon/EffectParameter
  Phonon/EffectWidget
  Phonon/MediaControls
  Phonon/MediaObject
  Phonon/MediaObjectInterface
  Phonon/MediaProducerInterface
  Phonon/MediaQueue
  Phonon/ObjectDescription
  Phonon/ObjectDescriptionModel
  Phonon/SeekSlider
  Phonon/VideoDataOutput
  Phonon/VideoEffect
  Phonon/VideoFrame
  Phonon/VideoPath
  Phonon/VideoPlayer
  Phonon/VideoWidget
  Phonon/Visualization
  Phonon/VolumeFaderEffect
  Phonon/VolumeSlider
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/Phonon )


install( FILES 
  SafeSite/Agent
  SafeSite/Report
  SafeSite/ServiceInfo
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/SafeSite )


install( FILES 
  Solid/AcAdapter
  Solid/AudioHw
  Solid/Battery
  Solid/Block
  Solid/Button
  Solid/Camera
  Solid/Capability
  Solid/Cdrom
  Solid/Device
  Solid/DeviceManager
  Solid/Display
  Solid/DvbHw
  Solid/FrontendObject
  Solid/ManagerBase
  Solid/Network
  Solid/NetworkHw
  Solid/NetworkInterface
  Solid/OpticalDisc
  Solid/PortableMediaPlayer
  Solid/PowerManager
  Solid/Predicate
  Solid/Processor
  Solid/Storage
  Solid/Volume
  Solid/WirelessNetwork
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/Solid )


install( FILES 
  Solid/Ifaces/AcAdapter
  Solid/Ifaces/AudioHw
  Solid/Ifaces/AuthenticationValidator
  Solid/Ifaces/Battery
  Solid/Ifaces/Block
  Solid/Ifaces/Button
  Solid/Ifaces/Camera
  Solid/Ifaces/Capability
  Solid/Ifaces/Cdrom
  Solid/Ifaces/Device
  Solid/Ifaces/DeviceManager
  Solid/Ifaces/Display
  Solid/Ifaces/DvbHw
  Solid/Ifaces/Network
  Solid/Ifaces/NetworkHw
  Solid/Ifaces/NetworkInterface
  Solid/Ifaces/OpticalDisc
  Solid/Ifaces/PortableMediaPlayer
  Solid/Ifaces/PowerManager
  Solid/Ifaces/Processor
  Solid/Ifaces/Storage
  Solid/Ifaces/Volume
  Solid/Ifaces/WirelessNetwork
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/Solid/Ifaces )


install( FILES 
  ThreadWeaver/DependencyPolicy
  ThreadWeaver/Job
  ThreadWeaver/JobCollection
  ThreadWeaver/JobSequence
  ThreadWeaver/QueuePolicy
  ThreadWeaver/ResourceRestrictionPolicy
  ThreadWeaver/State
  ThreadWeaver/Thread
  ThreadWeaver/Weaver
  ThreadWeaver/WeaverInterface
  ThreadWeaver/WeaverObserver
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/ThreadWeaver )


install( FILES 
  khtml/DrawContentsEvent
  khtml/MouseDoubleClickEvent
  khtml/MouseEvent
  khtml/MouseMoveEvent
  khtml/MousePressEvent
  khtml/MouseReleaseEvent
DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/khtml )

